# B8_ChangeART

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
articles/: admin.py  change.py  models.py  serializers.py  tests.py  urls.py  views.py
changeart/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializer.py  serializers.py  tests.py  urls.py  views.py
