[tool.poetry]
name = "b8-project"
version = "0.1.0"
description = ""
authors = ["Seman_Kim <sdoramkim@gmail.com>"]
readme = "README.md"
packages = [{include = "b8_project"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^4.0.0"
pillow = "^9.5.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
